--- a/configure.in
+++ b/configure.in
@@ -41,7 +41,7 @@ AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettex
 dnl Languages which your application supports
 ALL_LINGUAS=""
 AM_GNU_GETTEXT
-AM_GNU_GETTEXT_VERSION(0.10.40)
+AM_GNU_GETTEXT_VERSION(0.12.1)
 
 dnl Set PACKAGE_LOCALE_DIR in config.h.
 if test "x${prefix}" = "xNONE"; then
@@ -107,14 +107,14 @@ AC_DEFINE_UNQUOTED(PACKAGE_HELP_DIR, "${packageprefix}/${packagehelpdir}")
 AC_DEFINE_UNQUOTED(PACKAGE_MENU_DIR, "${packageprefix}/${packagemenudir}")
 AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")
 
-AC_OUTPUT([
+AC_OUTPUT([ m4/Makefile 
 Makefile
-intl/Makefile
 po/Makefile.in
 macros/Makefile
 src/Makefile
-pixmaps/Makefile
 data/Makefile
+intl/Makefile
+data/pixmaps/Makefile
 gamp.desktop
 ])
 
