More Makefile and configure cleanups

--- a/configure.ac
+++ b/configure.ac
@@ -40,10 +40,10 @@ AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
-GAMP_MODULES="gtk+-2.0 >= $GTK_REQUIRED gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED gconf-2.0 >= $GCONF_REQUIRED"
-PKG_CHECK_MODULES(GAMP, $GAMP_MODULES)
-AC_SUBST(GAMP_CFLAGS)
-AC_SUBST(GAMP_LIBS)
+GNOME_MODULES="gtk+-2.0 >= $GTK_REQUIRED gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED gconf-2.0 >= $GCONF_REQUIRED"
+PKG_CHECK_MODULES(GNOME, $GNOME_MODULES)
+AC_SUBST(GNOME_CFLAGS)
+AC_SUBST(GNOME_LIBS)
 
 GST_REQ=0.7.2
 dnl start with 0.8
