--- a/Makefile.am
+++ b/Makefile.am
@@ -1,21 +1,36 @@
 SUBDIRS = src pixmaps po
 
-EXTRA_DIST = \
-	$(desktop_in_files)		\
-        gamp.glade              \
-        open-location.glade     \
-        gamp.png
 
 desktopdir = $(datadir)/applications
 desktop_in_files = gamp.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
+@INTLTOOL_DESKTOP_RULE@
  
 gladedir = $(pkgdatadir)
 glade_DATA = gamp.glade open-location.glade
  
-@INTLTOOL_DESKTOP_RULE@
- 
 icondir = $(datadir)/pixmaps
 icon_DATA = gamp.png
- 
-install-data-local:
+
+EXTRA_DIST = \
+	AUTHORS					\
+	MAINTAINERS				\
+	NEWS					\
+	README					\
+	intltool-merge.in		\
+	intltool-update.in		\
+	intltool-extract.in		\
+	omf.make				\
+	xmldocs.make			\
+	$(desktop_in_files)		\
+	$(glade_DATA)			\
+	$(icon_DATA)
+	
+DISTCLEANFILES = \
+	po/.intltool-merge-cache	\
+	$(desktop_DATA)				\
+	intltool-extract			\
+	intltool-merge				\
+	intltool-update
+
+
