--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,6 @@
-SUBDIRS = src pixmaps po
+SUBDIRS = src pixmaps po data
 
 
-desktopdir = $(datadir)/applications
-desktop_in_files = gamp.desktop.in
-desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
-@INTLTOOL_DESKTOP_RULE@
- 
 gladedir = $(pkgdatadir)
 glade_DATA = gamp.glade open-location.glade
  
@@ -19,12 +14,10 @@ EXTRA_DIST = \
 	intltool-extract.in		\
 	omf.make				\
 	xmldocs.make			\
-	$(desktop_in_files)		\
 	$(glade_DATA)
 	
 DISTCLEANFILES = \
 	po/.intltool-merge-cache	\
-	$(desktop_DATA)				\
 	intltool-extract			\
 	intltool-merge				\
 	intltool-update
