*** empty log message ***

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,7 @@
 # List of source files containing translatable strings.
-gamp.desktop.in
-gamp.glade
-open-location.glade
+data/gamp.desktop.in
+data/gamp.glade
+data/open-location.glade
 src/main.c
 src/gap-metadata.c
 src/gui-callbacks.c
